devel
-----

* BTS-199: remove check for environment variable `GLIBCXX_FORCE_NEW` from 
  server start, and remove setting this variable from startup scripts. 
  The reason is that the environment variable only controls the behavior of
  programs linked against glibc, but our release builds are linked to libmusl.

* Make the cache_oblivious option of jemalloc configurable from the
  environment and set its default to `false`. This helps to save
  4096 bytes of RAM for every allocation which is at least 16384 bytes
  large. This is particularly beneficial for the RocksDB buffer cache.

* Updated ArangoDB Starter to 0.15.6-preview-1.

* Acquire a snapshot of the (list of) indexes when starting document insert, 
  update/replace and remove operations, and use that snapshot throughout the 
  operation. Previously, the list of indexes was acquired multiple times during
  a write operation, and it was (at least in theory) possible that the list of
  indexes changed between the individual acquistions.
  The PR also contains an optimization to not fetch the full document from the 
  storage engine for remove and replace operations in case the full document is
  not needed to process the operation. This is the case when the collection 
  does not contain any secondary indexes and `returnOld` is not used.

* Added experimental startup option `--rocksdb.block-cache-jemalloc-allocator`.
  This option defaults to `false`. When set to `true`, a jemalloc-based memory 
  allocator will be used to allocate memory for the RocksDB block cache. 
  This allocator will also mark the memory of the block cache to be excluded 
  from coredumps, potentially reducing coredump size a lot.

* Use intermediate commits in old shard synchronization protocol. This avoids
  overly large RocksDB transactions when syncing large shards, which is a
  remedy for OOM kills during restarts.

* Remove async mode from pregel.

* Added a configuration option (for the agency):