@@ -1,6 +1,13 @@
 devel
 -----
 
+* Use more compact and efficient representation for arrays and objects during
+  AQL AST serialization and deserialization. This can help to reduce the size
+  of messages exchanged between coordinator and database servers during query
+  setup, and also reduce the time needed for parsing these messages. This 
+  especially helps when there are large bind parameter values that are arrays
+  or objects.
+
 * BTS-199: remove check for environment variable `GLIBCXX_FORCE_NEW` from 
   server start, and remove setting this variable from startup scripts. 
   The reason is that the environment variable only controls the behavior of
